<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/L.layout_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/R.layout_top"
            style="@style/genetal_layout">

            <TextView
                android:id="@+id/bg_top_rectangle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="#EFEBE9" />

            <ImageView
                android:id="@+id/bg_top_rectangle_border"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/bg_top_rectangle"
                android:scaleType="centerCrop"
                android:src="@drawable/triagle_border" />

            <ImageView
                android:id="@+id/chocolate_top"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_top" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/L_layout_main_content"
            style="@style/genetal_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/story"
                style="@style/header"
                android:text="@string/story" />

            <View
                android:id="@+id/story_separator"
                style="@style/divider" />

            <TextView
                android:id="@+id/description"
                style="@style/description"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/featured_products"
                style="@style/header"
                android:text="@string/featured" />

            <View
                android:id="@+id/featured_separator"
                style="@style/divider" />

            <LinearLayout
                android:id="@+id/L.layout_featured"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/featured_left"
                    style="@style/image"
                    android:src="@drawable/chocolate_roses" />

                <ImageView
                    android:id="@+id/featured_central"
                    style="@style/image"
                    android:src="@drawable/chocolate_shoes"
                    />

                <ImageView
                    android:id="@+id/featured_right"
                    style="@style/image"
                    android:src="@drawable/chocolate" />
            </LinearLayout>

            <TextView
                android:id="@+id/contact"
                style="@style/header"
                android:text="@string/contact_info" />

            <View
                style="@style/divider" />

            <TextView
                android:id="@+id/contact_phone_number"
                style="@style/contact_info"
                android:autoLink="phone"
                android:drawableLeft="@drawable/ic_call_24dp"
                android:layout_marginTop="24dp"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/contact_facebook"
                style="@style/contact_info"
                android:autoLink="web"
                android:drawableLeft="@drawable/ic_person_add_24dp"
                android:text="@string/facebook" />

            <TextView
                android:id="@+id/contact_mail"
                style="@style/contact_info"
                android:autoLink="email"
                android:drawableLeft="@drawable/ic_mail_24dp"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/contact_web"
                style="@style/contact_info"
                android:autoLink="web"
                android:drawableLeft="@drawable/ic_public_24dp"
                android:text="@string/web" />

            <TextView
                android:id="@+id/contact_address"
                style="@style/contact_info"
                android:drawableLeft="@drawable/ic_place_24dp"
                android:text="@string/address" />

            <ImageView
                android:id="@+id/google_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="openBrowser"
                android:scaleType="centerCrop"
                android:src="@drawable/map"
                android:tag="@string/google_maps_link" />
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#251715"
                android:gravity="center"
                android:text="All rights reserved. © 2017"
                android:textAppearance="@android:style/TextAppearance.Small" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>